@@ -16,6 +16,20 @@
 	<name>util</name>
 	<url>https://github.com/MarceloLeite2064/libraries</url>
 	<description>A series of useful classes and methods which helps on minor tasks</description>
+	
+	<properties>
+		<surefire.argLine.default>-Djdk.attach.allowAttachSelf=true -noverify</surefire.argLine.default>
+		<surefire.argLine>${surefire.argLine.default}</surefire.argLine>
+	</properties>
+	
+	<profiles>
+		<profile>
+			<id>java-9</id>
+			<properties>
+				<surefire.argLine>${surefire.argLine.default} --illegal-access=permit --add-opens java.base/jdk.internal.loader=ALL-UNNAMED</surefire.argLine>
+			</properties>
+		</profile>
+	</profiles>
 
 	<dependencies>
 
@@ -41,18 +55,45 @@
 
 		<!-- Test -->
 		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-			<version>[3,4)</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
 			<version>[3.13.2, 4)</version>
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito2</artifactId>
+			<version>2.0.2</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4</artifactId>
+			<version>2.0.2</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4-rule-agent</artifactId>
+			<version>2.0.2</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+				<configuration>
+					<argLine>${surefire.argLine}</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
